--- a/design.css
+++ b/design.css
@@ -1,3 +1,5 @@
+
+/* The body element sets a background image and adjusts the padding and margin to 0. */
 body{
     background-image: url("pngtree.png");
     background-repeat: no-repeat;
@@ -6,19 +8,26 @@ body{
     margin: 0;
 }
 
+/* The button element sets the background color and border color. */
 button{
     background-color: rgb(90, 65, 97);
     border-color: rgb(132, 116, 137);
 }
 
+
+/* The .nav_button class hides an element on the navigation bar. */
 .nav_button{
     display: none;
 }
 
+/* adjusting image width */
 nav img{
     width: 15%;
 }
 
+
+/* The nav element sets the font size and color of the social 
+media icons and navigation bar's middle buttons. */
 .nav_bar{
     background-color: black;
     position: sticky;
@@ -37,11 +46,6 @@ nav .socialmediaicons i{
     margin: 3px;
 }
 
-.responsive_button{
-    display: flex;
-    list-style: none;
-}
-
 nav .middle_buttons a{
     color: white;
     font-family: 'Oswald', sans-serif;
@@ -51,6 +55,15 @@ nav .middle_buttons a{
     margin: 10px
 }
 
+/* The .responsive_button class sets 
+the list style to none and the display to flex. */
+.responsive_button{
+    display: flex;
+    list-style: none;
+}
+
+/* The .mercury-album and .night-visions classes set 
+the background color, height, and font family.  */
 .mercury-album , .night-visions{
     display: flex;
     justify-content: center;
@@ -61,10 +74,13 @@ nav .middle_buttons a{
     font-family: 'Oswald', sans-serif;
 }
 
+/* adjusting image width */
 .mercury-album img{
     width: 100%;
 }
 
+/* The .album-description and .event-description classes set the text color, display, flex-direction,
+ justify-content, align-items, and text-align. */
 .album-description , .event-description{
     color: white;
     display: flex;
@@ -74,6 +90,8 @@ nav .middle_buttons a{
     text-align: center;
 }
 
+/* The .album-description and .event-description classes adjusts the 
+width , padding , border radius and margin of the button */
 .album-description button , .event-description button{
     width: 25%;
     padding: 10px;
@@ -89,6 +107,7 @@ nav .middle_buttons a{
     width: 92%;
 }
 
+/* The .nv-poster and .nv-teaser classes set the margin and padding. */
 .nv-poster img{
     width: 100%;
     height: 600px;
@@ -109,27 +128,38 @@ nav .middle_buttons a{
     height: 600px;
 }
 
+/* The 
+main class sets the padding-top and padding-bottom. */
 main{
     padding-bottom: 60px;
     padding-top: 60px;
 }
 
+/* The button:hover set the hover effects for buttons */
+/* when you hover the background color changes in 0.5 seconds */
 button:hover{
     background-color: rgba(132, 116, 137, 0.8);
     transition: 0.5s;
 }
 
+/* .socialmediaicons span i:hover set the hover effects for
+the icons where it adjusts the fontsize of the icons on 0.5 seconds*/
 .socialmediaicons span i:hover{
     font-size: xx-large;
     transition: 0.5s;
 }
 
+/* ul li a:hover class set the hover effects for anchor tags
+where it adjusts the fontsize of it, color ,when you hover it changes in 0.5 second*/
 ul li a:hover{
     font-size: xx-large;
     color: rgba(132, 116, 137, 0.8);;
     transition: 0.5s;
 }
 
+/* The @media rule adjusts the layout for screens with a maximum width of 1100px.
+ It modifies the navigation bar's height, adds a responsive button for small screens,
+  adjusts the size and position of various elements, and changes the font size of the night visions section.  */
 @media only screen and (max-width: 1100px) {
     .nav_bar{
         padding: 0 30px;
@@ -217,6 +247,7 @@ ul li a:hover{
 }
 
 @media only screen and (max-width: 1100px) {
+    /* The .middle_buttons.responsive class sets the opacity to 1 on small screens. */
     .middle_buttons.responsive{
         opacity: 1;
 
